# ckanext-collection

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.md.temp  gulpfile.js  index.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  setup.cfg  sitemap.xml  test.ini
.github/workflows/: test.yml
api/: index.html
ckanext/collection/: ap_config.yaml  cli.py  config.py  config_declaration.yaml  helpers.py  interfaces.py  internal.py  plugin.py  shared.py  signals.py  types.py  views.py
ckanext/collection/assets/: script.js  webassets.yml
ckanext/collection/assets/js/: htmx-init-ckan-modules.js
ckanext/collection/logic/: auth.py
ckanext/collection/templates/: page.html
ckanext/collection/templates/collection/serialize/: html_main.html  html_record.html  htmx_table_counter.html  htmx_table_form.html  htmx_table_main.html  htmx_table_pager.html  htmx_table_record.html  htmx_table_table.html  table_form.html  table_main.html  table_record.html  table_table.html
ckanext/collection/templates/collection/serialize/collection_explorer/: main.html
ckanext/collection/templates/collection/serialize/db_explorer/: main.html
ckanext/collection/templates/collection/serialize/explorer/: main.html
ckanext/collection/templates/collection/serialize/html/: record.html
ckanext/collection/templates/collection/serialize/htmx_table/: counter.html  filter.html  form.html  main.html  pager.html  record.html  table.html
ckanext/collection/templates/collection/serialize/table/: counter.html  filter.html  form.html  main.html  pager.html  record.html  table.html
ckanext/collection/templates/collection/snippets/: dump.html  html_main.html  html_record.html  row.html  table.html  table_main.html  table_record.html
ckanext/collection/tests/: conftest.py  test_dive.py  test_plugin.py  test_readme.py  test_shared.py
ckanext/collection/tests/data/: file.csv
ckanext/collection/tests/utils/: test_collection.py  test_columns.py  test_data.py  test_filters.py  test_pager.py  test_serializer.py  test_shared.py
ckanext/collection/utils/: __init__.py  collection.py  columns.py  data.py  db_connection.py  filter.py  filters.py  pager.py  serialize.py  shared.py
ckanext/collection/utils/collection/: __init__.py  api.py  base.py  db.py  explorer.py  model.py
ckanext/collection/utils/data/: __init__.py  api.py  base.py  db.py  misc.py  model.py  stream.py
ckanext/collection/utils/serialize/: __init__.py
configuration/: index.html
detailed/: index.html
docs/: configuration.md  detailed.md  installation.md  integrations.md  interfaces.md  usage.md
docs/examples/: access.md  index.md
docs/structure/: collection.md  columns.md  data.md  domain.md  filters.md  index.md  pager.md  serializer.md
examples/: index.html
examples/access/: index.html
installation/: index.html
integrations/: index.html
interfaces/: index.html
search/: search_index.json
structure/: index.html
structure/collection/: index.html
structure/columns/: index.html
structure/data/: index.html
structure/domain/: index.html
structure/filters/: index.html
structure/pager/: index.html
structure/serializer/: index.html
usage/: index.html
